test/anchore-admission-controller/validating-webook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: test1-anchore-admission-controller.admission.anchore.io
webhooks:
- name: test1-anchore-admission-controller.admission.anchore.io
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/admission.anchore.io/v1beta1/imagechecks
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRFNE1ETXlPREEwTURFeE9Gb1hEVEk0TURNeU5UQTBNREV4T0Zvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkYvCmhmVmNWTGowcitralRiZ3ZvSEVyTnIyUUFoTFdKbmVkMkNHMmVWZHNZR284Q3UvQ2JidlR3Z1VJa2hYQk1Pa2QKdzNHdmN6TlFHUGhXUHYwcHVMRDlhQm1xbXdjVEVFc09FeVJEK0hNeXN6Q1hPWjFjMUg1ZWF2RVlSaDVBWUIrMwpoTnlDdXp5aCsvRX [...]
  rules:
  - operations:
    - CREATE
    apiGroups:
    - ""
    apiVersions:
    - "*"
    resources:
    - pods
  failurePolicy: Fail
